# ColorPicker

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  ColorHistory.qml  ColorPicker.qml  ColorPickerDialog.qml  ColorSampler.qml  ColorSlider.qml  ColorTool.qml  HSVSlider.qml  LICENSE  Main.qml  README.md  RGBSlider.qml  colorPickerBackend.cpp  colorPickerBackend.h  colorhistorymodel.cpp  colorhistorymodel.h  colorpicker_p.cpp  colorpicker_p.h  colorpickerpreview.cpp  colorpickerpreview.h  colorslider_p.cpp  colorslider_p.h  colortool_p.h  colorwheel.cpp  colorwheel.h  eyedropPreview.cpp  eyedropPreview.h  main.cpp  main.qml  textfielddoublevalidator.cpp  textfielddoublevalidator.h
ColorPicker/: CMakeLists.txt  ColorHistory.qml  ColorPickerDialog.qml  ColorSampler.qml  ColorSlider.qml  ColorTool.qml  Eyedroper.qml  HSVSlider.qml  RGBSlider.qml  colorhistorymodel.cpp  colorpicker_p.cpp  colorpicker_p.h  colorpickerpreview.cpp  colorsampler_p.cpp  colorsampler_p.h  colortool_p.cpp  colorwheel.h  textfielddoublevalidator.cpp
Origin/: .gitignore  ApplicationWindow.qml  BoxShadow.qml  BusyIndicator.qml  Button.qml  CMakeLists.txt  CheckBox.qml  CheckDelegate.qml  CheckIndicator.qml  ComboBox.qml  CursorDelegate.qml  DelayButton.qml  Dial.qml  Dialog.qml  DialogButtonBox.qml  Drawer.qml  ElevationEffect.qml  Fonts.qml  Frame.qml  GroupBox.qml  HorizontalHeaderView.qml  ItemDelegate.qml  Label.qml  Menu.qml  MenuBar.qml  MenuBarItem.qml  MenuItem.qml  MenuSeparator.qml  OriginStatics.cpp  OriginTheme.qml  Page.qml  PageIndicator.qml  Pane.qml  Popup.qml  ProgressBar.qml  README.md  RadioButton.qml  RadioDelegate.qml  RadioIndicator.qml  RangeSlider.qml  (+24 more)
Origin/+Origin/: ColorDialog.qml  FileDialog.qml  FileDialogDelegate.qml  FileDialogDelegateLabel.qml  FolderBreadcrumbBar.qml  FolderDialogDelegate.qml  SaturationLightnessPicker.qml
Origin/.gitlab/merge_request_templates/: Default.md
